BS Parallel execution set up complete

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -96,7 +97,7 @@
                 <version>3.1.2</version>
                 <configuration>
                     <parallel>classes</parallel>
-                    <threadCount>${thread.count}</threadCount>
+                    <threadCount>5</threadCount>
                     <includes>
                     <include>**/ChromeTest.java</include>
                     <include>**/FirefoxTest.java</include>
