--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
 # General config
 base.url = https://elpais.com/
 default.timeout = 10
-run.mode = browserstack
+run.mode = local
 browser = chrome
 
 #file Download location
